# Arbitova

./: .env.example  .gitignore  A2A-PAY-計畫書.md  ARBITOVA_UI_MASTER_PLAN.md  AUTONOMOUS_RULES.md  AWESOME_X402_PR_OLD.md  BLUEPRINT.md  CHANGELOG.md  DECISION_NEEDED.md  LAUNCH_POSTS.md  LICENSE  M2_BASELINE.md  MISSION.md  MOLTBOOK_REPLY_TIEBREAKER.md  PROGRESS.md  QUICKSTART.md  README.md  REPORT.md  SEPOLIA_E2E_REPORT.json  SEPOLIA_E2E_REPORT.md  TEST_REPORT_2026-04-22.md  arbitova-dns.txt  iterate.js  package-lock.json  package.json  render.yaml  run-iteration.bat  smithery.yaml  test-cloud.js  test-pg.ps1
.github/workflows/: deploy-pages.yml  moltbook-agent.yml  publish-sdk.yml  test.yml
contracts/: .env.example  .gitignore  DEPLOY_GUIDE.md  README.md  foundry.toml  local-e2e-output.txt  sepolia-dryrun-output.txt
contracts/draft/: EscrowV1WithKleros.sol
contracts/script/: Deploy.s.sol  DeployDemo.s.sol  DeployReputationV1.s.sol  DeployTestSuite.s.sol  Flow3Setup.s.sol  LocalE2E.s.sol
contracts/src/: EscrowV1.sol  ReputationV1.sol
contracts/test/: EscrowV1.t.sol
demo/: run-demo.js
docs/: arbiter-ops-runbook.md  e2e-rehearsal-plan.md  erc4337-session-keys-design.md  kleros-v2-integration-plan.md  multisig-arbiter-design.md  pimlico-budget-policy.md  pimlico-paymaster-plan.md  remediation-plan.md  security-checklist.md  transparency-policy.md  two-tier-arbitration-design.md  upstream-prs-plan.md  user-accumulation-system.md  x402-adapter-spec.md
docs/decisions/: M-0-arbiter-architecture-v1.md  M-1-appeal-bond-economics.md  M-2-transparency-posture.md  M-6-bond-currency.md
docs/specs/: dispute-resolution-surface.md
docs/tutorials/: 15-min-paid-agent.md
drafts/: a2a-1631-reply.md  arbitova_escrow_a2a_cookbook.py  crewai-examples-pivot-issue.md  dev-log-017.md  dev-log-018.md  dev-log-019.md  dev-log-020.md  dev-log-021.md  dev-log-022.md  dev-log-023.md  dev-log-024.md  dev-log-025.md  dev-log-026.md  langgraph-comarketing-pitch.md
drafts/sprint-2026-04-24/: 01-agentkit-action-provider.ts
examples/: advanced_a2a_features.js  advanced_a2a_features.py  autogen_integration.py  claude_managed_agents.md  crewai_integration.py  langchain_integration.py  mastra_integration.ts  quickstart.py  quickstart_nodejs.js  typescript_example.ts
examples/langgraph/: README.md  escrow_node.py  test_escrow_node.py
examples/path_b/: autogen_buyer.py  buyer_demo.js  cdp_buyer_demo.py  sample_criteria.json  sample_delivery.md  seller_demo.js
functions/: blog.js
grants/: alchemy-startup-credits.md  base-builder-grant.md  base-nomination-form.md
mcp-server/: Dockerfile  GLAMA_LISTING.md  MIGRATION.md  README.md  index.js  package-lock.json  package.json  server.json  smoke-test.js
mcp-server/prompts/: arbitrator-self-check.md  buyer-verification.md  (+1 more)
public/: _headers  _redirects  admin.html  arbiter.html  architecture.html  badge.html  blog.html  claim.html  dashboard.html  docs.html  feedback.html  for-agents.html  index.html  integrate.html  manifest.json  partners.html  pricing.html  profile.html  robots.txt  sitemap.xml  status.html  try-real.html  try.html  verdict.html  verdicts.html
python-sdk/: README.md  pyproject.toml
python-sdk/arbitova/: __init__.py  cdp_adapter.py  client.py  path_b.py
python-sdk/tests/: test_cdp_adapter.py  test_path_b.py
reports/: M1-2026-04-22.md  overnight-handoff-2026-04-22.md
scripts/: backfill-accounts.js  backfill-platform-revenue.js  catalog.js  config.js  confirm-order.js  e2e-test.js  place-order.js  reconcile.js  reset-platform-revenue.js  seed-transactions.js  seller-agent.js  setup-catalog.js  setup-service.js
sdk/: MIGRATION_PATH_A_TO_B.md  index.d.ts  index.js  package.json  pathB.js
security/: bug-bounty-v0.md
seed/: run-seed.bat  seed-transactions.js
spec/: A2A-ESCROW-RFC-v0.1.md
src/: arbitrate.js  demo_seller_bot.js  events_sse.js  moltbook-agent.js  notify.js  openapi.json  server.js  verify.js  wallet.js  webhook.js  webhooks.js  worker.js
test/: arbiter-content-hash.test.js  contract.js  fees.test.js  invariants.test.js  orders.integration.test.js  prompt-injection.test.js  race.test.js  simulate.js  stake_bundle.js
(+79 files in other folders)
